package org.factcast.server.grpc.service;

class TransportLayerException extends RuntimeException {
    private static final long serialVersionUID = 1L;

    TransportLayerException(String msg) {
    }

}
